@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Administrator {

}

class Parameter {
  -designation
}

class ParameterCategory {
  -code
  -name
}



Company "1" -- "*" Administrator : knows  >
Company "1" -- "*" ParameterCategory : adopts >
Company "1" -- "*" Parameter : capable of analysing >
Parameter "*" -- "1" ParameterCategory: presented under >
ParameterCategory "*" -- "1" Administrator: created by >
@enduml